syntax = "proto3";

package proto;

option go_package = "proto";

message Question {
  int64 id = 1;
  string text = 2;
  int64 topic_id = 3;
  bool enabled = 4;
  int32 shows = 5;
}

message ListQuestionRequest {}
message ListQuestionResponse { repeated Question questions = 1; }
message GetQuestionRequest { int64 id = 1; }
message CreateQuestionRequest {
  string text = 1;
  int64 topic_id = 2;
  bool enabled = 3;
}
message UpdateQuestionRequest {
  Question question = 1;
  repeated string update_mask = 2;
}
message DeleteQuestionRequest { int64 id = 1; }
